codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__vim_empty_normal_slash.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"› /model         choose what model and reasoning effort to  "
"                 use                                        "
"  /effort        change how hard the model thinks: /effort  "
"                 [low|medium|high|…]                        "
"  /pruner-model  view or set the model that prunes context; "
"                                                            "
"› /                                                         "
"                                                            "
"                           100% context left | Vim: Insert  "
